# sh-py

./: .project  .pydevproject  pyproject.toml
.github/workflows/: pypi.yml
exported/com/softalks/: sh.py
