[project]
name = "com.softalks.sh"
description = "CLI Shell utilities for Python 3"
version = "0.0.1"
authors = [
  {name = "Santiago Ruiz", email= "hiebra@hotmail.com"}
]
dependencies = [
    "com.softalks.debug @ git+https://github.com/hiebra/rpdb@v0.0.1"
]
[tool.setuptools.packages.find]
where = ["exported"]
