[project]
name = "com.softalks.sh"
description = "CLI Shell utilities for Python 3"
version = "0.0.1"
authors = [
  {name = "Santiago Ruiz", email= "hiebra@hotmail.com"}
]
dependencies = [
    "com.softalks.debug @ https://github.com/hiebra/rpdb/archive/refs/tags/v0.0.1.zip"
]
[tool.setuptools.packages.find]
where = ["exported"]
